<resources>
    <string name="app_name">CakeMania</string>
    <string name="title_home">Home</string>
    <string name="title_cart">Cart</string>
    <string name="title_account">Account</string>
    <string name="cake_image">Cake Image</string>
    <string name="cake_name">Cake Name</string>
    <string name="weight">weight</string>
    <string name="price">price</string>
    <string name="added_to_cart">Added to Cart</string>
    <string name="add_to_cart">Add to Cart</string>
    <string name="move">Move</string>
    <string name="delete">Delete</string>
    <string name="loading_data">Loading data....</string>
    <string name="logo">logo</string>
    <string name="card_list">CARD LIST</string>
    <string name="selected_cake">SELECTED CAKE</string>
</resources>
