<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/add_to_cart_list_item_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        app:cardElevation="5dp"
        android:layout_marginTop="8dp"
        android:backgroundTint="@android:color/white">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">


            <ImageView
                android:id="@+id/cake_image"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_launcher_background"
                android:background="@android:color/white"
                android:contentDescription="@string/cake_image" />

            <TextView
                android:id="@+id/cake_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/cake_name"
                android:fontFamily="sans-serif-medium"
                android:lines="1"
                android:ellipsize="end"
                android:textAlignment="center"
                android:textColor="@android:color/black"/>

            <TextView
                android:id="@+id/cake_weight"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/weight"
                android:textAlignment="center"
                android:textColor="@android:color/black"/>

            <TextView
                android:id="@+id/cake_price"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/price"
                android:textAlignment="center"
                android:textColor="@android:color/black"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/move_button"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/colorPrimary"
                    android:text="@string/move"
                    android:layout_weight="0.5"
                    android:textColor="@android:color/white"
                    android:layout_marginStart="2dp"
                    android:layout_marginEnd="2dp"/>

                <Button
                    android:id="@+id/delete_button"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@android:color/holo_red_light"
                    android:text="@string/delete"
                    android:layout_weight="0.5"
                    android:textColor="@android:color/white"
                    android:layout_marginStart="2dp"
                    android:layout_marginEnd="2dp"/>


            </LinearLayout>
        </LinearLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>