<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        app:cardElevation="5dp"
        android:layout_marginTop="8dp"
        android:backgroundTint="@android:color/white">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">


            <ImageView
                android:id="@+id/cake_image"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_launcher_background"
                android:background="@android:color/white"
                android:contentDescription="@string/cake_image" />

            <TextView
                android:id="@+id/cake_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/cake_name"
                android:fontFamily="sans-serif-medium"
                android:lines="1"
                android:ellipsize="end"
                android:textAlignment="center"
                android:textColor="@android:color/black"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:orientation="horizontal">

                <ImageButton
                    android:id="@+id/minus_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_minus"
                    android:background="@android:color/white"/>


                <TextView
                    android:id="@+id/cake_weight"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/weight"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"
                    android:textAlignment="center"
                    android:textColor="@android:color/black"
                    />

                <ImageButton
                    android:id="@+id/plus_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_plus"
                    android:background="@android:color/white"/>



            </LinearLayout>

            <TextView
                android:id="@+id/cake_price"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/price"
                android:textAlignment="center"
                android:textColor="@android:color/black"/>

            <Button
                android:id="@+id/add_to_cart_button"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:background="@color/colorPrimary"
                android:text="@string/add_to_cart"
                android:textColor="@android:color/white"/>


        </LinearLayout>




    </androidx.cardview.widget.CardView>

</LinearLayout>